# schwachstellenmgmt

./: .gitignore  IP_Email.json  README.md  credentials.txt  docker-compose.yaml  email_functions.py  pyproject.toml  requirements.txt  secret_functions.py  setup.cfg  test_UnitTests.py  test_pytest.py  tests.py  vulnerabilityManagement.py
.github/workflows/: build_test_linux.yml  build_test_macos.yml  build_test_windows.yml
schwachstellenmgmt/: __init__.py  email_functions.py  secret_functions.py  vulnerability_management.py
schwachstellenmgmt/templates/: credentials.txt  link_passwordZIP_emailText.txt  passwordNextcloud_emailText.txt
