[build-system]
requires = [ "setuptools>=62.0.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "schwachstellenmgmt"
version = "0.0.1"
authors = [
  { name="Stefan Machmeier", email="stefan.machmeier@uni-heidelberg.de" },
  { name="Lea Schmierer", email="lea.schmierer@uni-heidelberg.de" },
]
description = "This project contacts the persons responsible for IP addresses affected by vulnerabilities via email. Communication takes place via the Nextcloud, an onetimesecret and the sending of emails."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
keywords = [ "network" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Security' ,
    'Topic :: Networking :: Communication',
    'Topic :: Security :: Cryptography',
    'Topic :: Communications :: Email',
]

[project.scripts]
schwachstellenmgmt = "schwachstellenmgmt.vulnerability_management:main"

[project.urls]
"Homepage" = "https://github.com/bwInfoSec/schwachstellenmgmt/"
"Bug Tracker" = "https://github.com/bwInfoSec/schwachstellenmgmt/issues"

[tool.setuptools.packages.find]
include = [
    "schwachstellenmgmt*",
]
exclude = [
    "test*",
    "assets*",
]
